[package]
name = "dh-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.7"
base64 = "0.21.5"
chrono = "0.4.31"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }
xml-rs = "0.8.19"
